typescript/checker/tests/conformance/async/es6/asyncArrowFunction/asyncArrowFunction8_es6.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/async/es6/asyncArrowFunction/asyncArrowFunction8_es6.ts:5:19
  |
5 |   var v = { [await]: foo }
  |                   ^

